--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,3 +1,5 @@
+name: Deploy Storybook
+
 on:
   push:
     branches:
@@ -15,7 +17,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
-      
+
       - name: Install dependencies
         run: npm ci --legacy-peer-deps
 
@@ -23,6 +25,6 @@ jobs:
         run: npm run build-storybook
 
       - name: Deploy Storybook
-        run: rpm run deploy-storybook -- --ci --existing-output-dir=storybook-static
+        run: npm run deploy-storybook -- --ci --existing-output-dir=storybook-static
         env:
           GH_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}
